# ahun_card_generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  platformio.ini
.pio/libdeps/esp-wrover-kit/LovyanGFX/: .piopm
data/templates/: cura_caboclo_boiadeiro.json  cura_exu.json  cura_pretos_velhos.json  ere_pretos_velhos.json  fechamento.json  feijoada_dos_vovos.json  festa_tiriri.json
docs/: EMBEDDED_MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  MIGRATION_PROGRESS_EMBEDDED.md
docs/examples/: input_calendar.txt  output_calendar.json  output_calendar_example.json
include/: card.h  card.hpp  cli.h  cli.hpp  exceptions.hpp  logger.hpp  parse_calendar.h  parse_calendar.hpp  read_calendar.h  template.h  template.hpp
include/wrappers/: JsonWrapper.hpp  MagickWandWrapper.hpp  XmlWrapper.hpp
lib/AhunCLI/include/: cli.hpp
lib/AhunCLI/src/: cli.cpp
lib/AhunCore/include/: logger.hpp  parse_calendar.hpp  status.hpp  template.hpp
lib/AhunCore/include/wrappers/: JsonWrapper.hpp
lib/AhunCore/src/: parse_calendar.cpp  template.cpp
lib/AhunGraphics/include/: card.hpp
lib/AhunGraphics/src/: card.cpp
src/: card.c  card.cpp  cli.c  cli.cpp  list_templates.c  main.c  main.cpp  parse_calendar.c  parse_calendar.cpp  read_calendar.c  template.c  template.cpp
templates/: cura_caboclo_boiadeiro.xml  cura_exu.xml  cura_pretos_velhos.xml  ere_pretos_velhos.xml  fechamento.xml  feijoada_dos_vovos.xml  festa_tiriri.xml  multi_test.xml  template.xml
